--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
@@ -48,6 +49,7 @@
     "@babel/eslint-parser": "^7.16.0",
     "@babel/plugin-syntax-jsx": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@types/testing-library__jest-dom": "^5.14.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.25.2",
